--- a/less/style.less
+++ b/less/style.less
@@ -12,6 +12,7 @@ div#cabecalho {
     margin-top: 0;
     position: fixed;
     z-index: 2;
+    width: 1410;
 }
 header{                                             //Ajustes no cabeçalho da página
     margin: 0;
@@ -26,6 +27,7 @@ header{                                             //Ajustes no cabeçalho da p
         height: auto;
     }
     #pesquisa-header{                               //Div contendo a barra de pesquisa no cabeçalho
+        background-color: whites;
         width: 70%;
         height: auto;       
         margin-right: 50px; 
@@ -82,6 +84,7 @@ header{                                             //Ajustes no cabeçalho da p
     justify-content: space-between;
     margin-left: 50px;
     margin-right: 50px;
+    background-color: white;
     i{
         margin-right: 10px;
     }
@@ -130,6 +133,7 @@ header{                                             //Ajustes no cabeçalho da p
     .categorias-selecionadas{
         display: inline-flex;
         justify-content: space-between;
+        margin: 0;
     }
 }
 
